--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -26,12 +26,12 @@
 		"@parcel/packager-raw-url": "2.0.0-beta.2",
 		"@parcel/transformer-sass": "2.0.0-beta.2",
 		"@parcel/transformer-webmanifest": "2.0.0-beta.2",
-		"@sapphire/eslint-config": "^3.1.1",
-		"@sapphire/prettier-config": "^1.1.0",
-		"@sapphire/ts-config": "^2.2.0",
+		"@sapphire/eslint-config": "^3.1.2",
+		"@sapphire/prettier-config": "^1.1.1",
+		"@sapphire/ts-config": "^2.2.1",
 		"npm-run-all": "^4.1.5",
 		"parcel": "2.0.0-beta.2",
-		"prettier": "^2.2.1",
+		"prettier": "^2.3.0",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.2.4"
 	},
@@ -49,6 +49,10 @@
 	},
 	"prettier": "@sapphire/prettier-config",
 	"resolutions": {
-		"is-svg": "^4.3.1"
+		"is-svg": "^4.3.1",
+		"lodash": "^4.17.21",
+		"merge": "^2.1.1",
+		"trim": "^1.0.1",
+		"postcss": "^8.2.15"
 	}
 }
