--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -24,14 +24,15 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.15.5",
-		"@parcel/packager-raw-url": "2.0.0-beta.3.1",
-		"@parcel/transformer-sass": "2.0.0-beta.3.1",
-		"@parcel/transformer-webmanifest": "2.0.0-beta.3.1",
+		"@parcel/packager-raw-url": "^2.0.0-rc.0",
+		"@parcel/transformer-image": "2.0.0-rc.0",
+		"@parcel/transformer-sass": "^2.0.0-rc.0",
+		"@parcel/transformer-webmanifest": "^2.0.0-rc.0",
 		"@sapphire/eslint-config": "^3.2.3",
 		"@sapphire/prettier-config": "^1.1.6",
 		"@sapphire/ts-config": "^2.3.2",
 		"npm-run-all": "^4.1.5",
-		"parcel": "2.0.0-beta.3.1",
+		"parcel": "^2.0.0-rc.0",
 		"prettier": "^2.3.2",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.4.2"
@@ -54,6 +55,7 @@
 		"lodash": "^4.17.21",
 		"merge": "^2.1.1",
 		"trim": "^1.0.1",
-		"normalize-url": "^4.5.1"
+		"normalize-url": "^4.5.1",
+		"set-value": "^4.0.1"
 	}
 }
